@@ -88,10 +88,13 @@ PROCESSEDDOCFILES = \
 
 # Declare minimal dependencies for documents by output driver.
 PROCESSEDFILES_DEPS_HTML = pre-grohtml groff troff post-grohtml \
-  font/devhtml/stamp font/devps/stamp
-PROCESSEDFILES_DEPS_PS = groff troff grops font/devps/stamp
-PROCESSEDFILES_DEPS_PDF = groff troff gropdf font/devpdf/stamp
-PROCESSEDFILES_DEPS_TXT = groff troff grotty font/devutf8/stamp
+  tmac/html.tmac tmac/html-end.tmac font/devhtml/stamp font/devps/stamp
+PROCESSEDFILES_DEPS_PS = groff troff grops tmac/ps.tmac \
+  font/devps/stamp
+PROCESSEDFILES_DEPS_PDF = groff troff gropdf tmac/pdf.tmac \
+  font/devpdf/stamp
+PROCESSEDFILES_DEPS_TXT = groff troff grotty tmac/tty.tmac \
+  font/devutf8/stamp
 
 if USE_GROHTML
 $(PROCESSEDDOCFILES_HTML): $(PROCESSEDFILES_DEPS_HTML)
